# minesweeper

./: .gitignore  README.md  pyproject.toml  requirements.txt
minesweeper/: __main__.py
minesweeper/core/: world.py
minesweeper/game/: __main__.py
