[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = ["duyixian <duyixian1234@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.269"
pylint = "^2.17.4"


[tool.poetry.group.build.dependencies]
nuitka = "^1.5.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentcloud"
url = "https://mirrors.cloud.tencent.com/simple/"
